Converge portfolio API on constructor-first core and fix review findings
Replace the unreleased PortfolioAsset/AlignedPortfolioSeries/PortfolioExecutor
surface with PortfolioSeries -> PortfolioAllocation ->
PortfolioSeriesManager.run(...), per the PR's API-direction review:

- PortfolioSeries accepts one or more series, owns detached bar copies
  (source/view mutations can no longer change results) and aligns with
  overflow-safe offset iteration.
- Rebalancing uses scale-aware relative tolerances, a consistent no-trade
  band and a hold candidate, so solver residue never triggers fixed fees;
  cash-releasing sells run first, fee-dominated sells by cash need, and
  buys scale uniformly, making execution independent of asset order.
- Snapshots report COMPLETED/PARTIAL/SKIPPED outcomes, achieved asset and
  cash weights, and traded notional versus turnover ratio.
- RebalancePolicy documents that it schedules the initial investment and
  adds or(), everyNthBar(), onIndexes(int...) and calendar firstBarOf().
- The exported value series starts with the initial capital, so criteria
  reconcile with totalReturn() including initial fees.
- PortfolioAllocation accepts literal Map<String, Number> weights; results
  and series print compact summaries.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QY7By2Fgy9LfBxtKeimAZX